# water-sort

./: Cargo.toml  README.md  Trunk.toml  rust-toolchain
core/: Cargo.toml
core/src/: lib.rs  puzzle.rs  solver.rs
core/src/utils/: comp_time_arith.rs  mod.rs
docs/: index.html  water-sort-web-4895f4e8deef68f.js  water-sort-web-4895f4e8deef68f_bg.wasm
sim/: Cargo.toml
sim/src/: main.rs
src/: main.rs  puzzle.rs  solver.rs
src/ui/: mod.rs  puzzle_display.rs
src/utils/: mod.rs
web/: Cargo.toml
web/src/: main.rs
web/src/ui/: puzzle_display.rs
web/src/utils/: random.rs
web/www/: index.html
www/: app.css
