[workspace]
resolver = "3"
members = [
    "core",
    "web",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
futures-channel = "0.3"
getrandom = { version = "0.4", default-features = false, features = ["wasm_js"] }
rand = { version = "0.10", default-features = false, features = ["std_rng"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
water-sort-core = { path = "core" }

[workspace.dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
]
