[package]
name = "water-sort-web"
version = "0.1.0"
edition.workspace = true

[dependencies]
futures-channel.workspace = true
getrandom.workspace = true
rand.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
water-sort-core.workspace = true
web-sys.workspace = true
